--- a/src/haml/entry.haml
+++ b/src/haml/entry.haml
@@ -3,8 +3,8 @@
   %head
     %meta{:charset => "utf-8"}
     %title 测试入口
-    %script{:src => "js/jquery/jquery.js", :type => 'text/javascript'}
-    %script{:src => "js/entry.js", :type => 'text/javascript'}
+    %script{:src => "/static/js/jquery/jquery.js", :type => 'text/javascript'}
+    %script{:src => "/static/js/entry.js", :type => 'text/javascript'}
   %body
     %label Player
     %br/
