--- a/src/view/game/entry.html
+++ b/src/view/game/entry.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset='utf-8' />
     <title>测试入口</title>
-    <script src='js/jquery/jquery.js' type='text/javascript'></script>
-    <script src='js/entry.js' type='text/javascript'></script>
+    <script src='/static/js/jquery/jquery.js' type='text/javascript'></script>
+    <script src='/static/js/entry.js' type='text/javascript'></script>
   </head>
   <body>
     <label>Player</label>
