--- a/src/haml/player/create.html.haml
+++ b/src/haml/player/create.html.haml
@@ -1,5 +1,10 @@
 = '{% extends "templates/layout.html" %}'
-= '{% block title %}首頁{% endblock %}'
+= '{% block title %}創建代理{% endblock %}'
 = '{% block body %}'
-%h2 INDEX PAGE
+%h2 創建玩家
+
+
+
 = '{% endblock %}'
+
+
