--- a/src/haml/player/index.html.haml
+++ b/src/haml/player/index.html.haml
@@ -1,5 +1,4 @@
 = '{% extends "templates/layout.html" %}'
-= '{% block title %}首頁{% endblock %}'
+= '{% block title %}代理{% endblock %}'
 = '{% block body %}'
-%h2 INDEX PAGE
 = '{% endblock %}'
