--- a/src/view/agent/index.html
+++ b/src/view/agent/index.html
@@ -1,5 +1,5 @@
 {% extends "templates/layout.html" %}
-{% block title %}首頁{% endblock %}
+{% block title %}代理{% endblock %}
 {% block body %}
-<h2>INDEX PAGE</h2>
+<h2>AGENT INDEX</h2>
 {% endblock %}
