--- a/src/view/templates/layout.html
+++ b/src/view/templates/layout.html
@@ -9,7 +9,7 @@
     <div id='header'>
       <div id='main'>
         <label id='logo'>Genesis</label>
-        <a herf='{% url action="logout" %}'>登出</a>
+        <a href='{% url controller="admin" action="logout" %}' id='logout'>登出</a>
       </div>
     </div>
     <div id='center'>
@@ -19,10 +19,10 @@
             <span class='title'>用户管理</span>
             <ul class='group'>
               <li class='item'>
-                <a>創建玩家</a>
+                <a href='{% url controller="player" action="create" %}'>創建玩家</a>
               </li>
               <li class='item'>
-                <a>創建代理</a>
+                <a href='{% url controller="agent" action="create" %}'>創建代理</a>
               </li>
             </ul>
           </div>
