--- a/src/haml/templates/layout.html.haml
+++ b/src/haml/templates/layout.html.haml
@@ -4,10 +4,14 @@
     %meta{:charset => "utf-8"}
     %title 創世紀-系统管理-{% block title %}{% endblock %}
     %link{:href => '/static/css/admin/index.css', :rel => 'stylesheet', :type => 'text/css'}
+    %script{:src => "/static/js/jquery/jquery.js", :type => 'text/javascript'}
+    %script{:src => "/static/js/jquery/jquery.blockUI.js", :type => 'text/javascript'}
+    %script{:src => "/static/js/admin/index.js", :type => 'text/javascript'}
   %body
+    #nil
     #header
       #main
-        %label{:id => "logo"} Genesis
+        %label{:id => "logo"} Genesis 創世紀
         %a{:id => "logout", :href => '{% url controller="admin" action="logout" %}'} 登出
     #center
       #main
@@ -16,9 +20,9 @@
             %span{:class => "title"} 用户管理
             %ul{:class => "group"}
               %li{:class => "item"}
-                %a{:href => '{% url controller="player" action="create" %}'} 創建玩家
+                %a.pop{:id => 'create_player', :href => '{% url controller="player" action="create" %}'} 創建玩家
               %li{:class => "item"}
-                %a{:href => '{% url controller="agent" action="create" %}'} 創建代理
+                %a.pop{:id => 'create_agent', :href => '{% url controller="agent" action="create" %}'} 創建代理
         #content
           = '{% block body %}'
           = '{% endblock %}'
