--- a/src/view/templates/layout.html
+++ b/src/view/templates/layout.html
@@ -4,11 +4,15 @@
     <meta charset='utf-8' />
     <title>創世紀-系统管理-{% block title %}{% endblock %}</title>
     <link href='/static/css/admin/index.css' rel='stylesheet' type='text/css' />
+    <script src='/static/js/jquery/jquery.js' type='text/javascript'></script>
+    <script src='/static/js/jquery/jquery.blockUI.js' type='text/javascript'></script>
+    <script src='/static/js/admin/index.js' type='text/javascript'></script>
   </head>
   <body>
+    <div id='nil'></div>
     <div id='header'>
       <div id='main'>
-        <label id='logo'>Genesis</label>
+        <label id='logo'>Genesis 創世紀</label>
         <a href='{% url controller="admin" action="logout" %}' id='logout'>登出</a>
       </div>
     </div>
@@ -19,10 +23,10 @@
             <span class='title'>用户管理</span>
             <ul class='group'>
               <li class='item'>
-                <a href='{% url controller="player" action="create" %}'>創建玩家</a>
+                <a class='pop' href='{% url controller="player" action="create" %}' id='create_player'>創建玩家</a>
               </li>
               <li class='item'>
-                <a href='{% url controller="agent" action="create" %}'>創建代理</a>
+                <a class='pop' href='{% url controller="agent" action="create" %}' id='create_agent'>創建代理</a>
               </li>
             </ul>
           </div>
