--- a/src/scss/admin/index.scss
+++ b/src/scss/admin/index.scss
@@ -117,61 +117,47 @@ div.menu {
   }
 }
 
-
 form {
   .rowElem {
     label {
       width: 50px;
-      text-align: left; font-size: 14px; color: #445668;
-      float: left; clear: left; margin: 11px 20px 0 0; width: 95px;
-      text-transform: uppercase; text-shadow: 0px 1px 0px #f2f2f2;
+      display: inline-block;
+      color: rgb(102, 102, 102);
+      font-weight: bold;
+	    padding-right: 10px;
+	    text-align: right;
     }
   }
 
-  input {
-    width: 200px; height: 25px; padding: 5px 20px 0px 20px; margin: 0 0 20px 0;
-    background: #5E768D;
-    background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%); /* firefox */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D)); /* webkit */
-    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
-    -moz-box-shadow: 0px 1px 0px #f2f2f2;-webkit-box-shadow: 0px 1px 0px #f2f2f2;
-    font-family: sans-serif; font-size: 16px; color: #f2f2f2; text-transform: uppercase; text-shadow: 0px -1px 0px #334f71;
-  }
   input::-webkit-input-placeholder  {
-    color: #a1b2c3; text-shadow: 0px -1px 0px #38506b;
-  }
-  input:-moz-placeholder {
-    color: #a1b2c3; text-shadow: 0px -1px 0px #38506b;
-  }
-
-  textarea {
-    width: 260px; height: 170px; padding: 12px 20px 0px 20px; margin: 0 0 20px 0;
-    background: #5E768D;
-    background: -moz-linear-gradient(top, #546A7F 0%, #5E768D 20%); /* firefox */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#546A7F), color-stop(20%,#5E768D)); /* webkit */
-    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
-    -moz-box-shadow: 0px 1px 0px #f2f2f2;-webkit-box-shadow: 0px 1px 0px #f2f2f2;
-    font-family: sans-serif; font-size: 16px; color: #f2f2f2; text-transform: uppercase; text-shadow: 0px -1px 0px #334f71;
-  }
-  textarea::-webkit-input-placeholder  {
-    color: #a1b2c3; text-shadow: 0px -1px 0px #38506b;
-  }
-  textarea:-moz-placeholder {
-    color: #a1b2c3; text-shadow: 0px -1px 0px #38506b;
-  }
-
-  input:focus, textarea:focus {
-    background: #728eaa;
-    background: -moz-linear-gradient(top, #668099 0%, #728eaa 20%); /* firefox */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#668099), color-stop(20%,#728eaa)); /* webkit */
+    color: #a1b2c3; 
+    text-shadow: 0px -1px 0px #38506b;
   }
 
   input[type=submit] {
-    width: 185px; height: 52px; float: right; padding: 10px 15px; margin: 0 15px 0 0;
-    -moz-box-shadow: 0px 0px 5px #999;-webkit-box-shadow: 0px 0px 5px #999;
-    border: 1px solid #556f8c;
-    background: -moz-linear-gradient(top, #718DA9 0%, #415D79 100%); /* firefox */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#718DA9), color-stop(100%,#415D79)); /* webkit */
+    width: 50px;
     cursor: pointer;
+    border: 1px solid #556f8c;
+    box-shadow: 0px 0px 2px #999;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    float: right;
+  }
+
+  a.cancel {
+    margin-top: 16px;
+    margin-right: 8px;
+    display: block;
+    float: right;
+  }
+}
+
+div.pop {
+  text-align: left;
+  margin: 0px 15px;
+  font-size: 1.1em;
+
+  h2 {
+    font-size: 1.3em;
   }
 }
