--- a/src/view/agent/create.html
+++ b/src/view/agent/create.html
@@ -1,18 +1,1 @@
-<h2>創建代理</h2>
-<form method='post'>
-  <div class='rowElem'>
-    <label for='identity'>用户</label>
-    <input name='identity' type='text' />
-  </div>
-  <div class='rowElem'>
-    <label for='password'>密碼</label>
-    <input name='password' type='password' />
-  </div>
-  <div class='rowElem'>
-    <label for='re-password'></label>
-    <input name='re-password' type='password' />
-  </div>
-  <div class='rowElem'>
-    <input type='submit' value='登陆' />
-  </div>
-</form>
+<script src='/static/js/admin/agent.js' type='text/javascript'></script>
