--- a/src/scss/admin/index.scss
+++ b/src/scss/admin/index.scss
@@ -6,6 +6,13 @@ $side-width: 150px;
   margin: 0px auto;
 }
 
+@mixin button {
+  width: 50px;
+  cursor: pointer;
+  border: 1px solid #556f8c;
+  box-shadow: 0px 0px 2px #999;
+}
+
 body {
   border: 0px;
   margin: 0px;
@@ -135,13 +142,10 @@ form {
   }
 
   input[type=submit] {
-    width: 50px;
-    cursor: pointer;
-    border: 1px solid #556f8c;
-    box-shadow: 0px 0px 2px #999;
+    float: right;
     margin-top: 10px;
     margin-bottom: 10px;
-    float: right;
+    @include button;
   }
 
   a.cancel {
@@ -159,5 +163,30 @@ div.pop {
 
   h2 {
     font-size: 1.3em;
+  }
+}
+
+div.acount_info {
+  label {
+    display: block-inline;
+    font-size: 14px;
+    padding-bottom: 2px;
+    font-weight: bold;
+    color: rgb(153, 153, 153);
+    margin-left: 10px;
+  }
+
+  span {
+    display: block-inline;
+    font-size: 1.5em;
+    padding-bottom: 2px;
+    font-weight: bold;
+    color: rgb(59, 89, 152);
+  }
+
+  input[type=button] {
+    float: right;
+    margin-right: 10px;
+    @include button;
   }
 }
