--- a/src/haml/templates/layout.html.haml
+++ b/src/haml/templates/layout.html.haml
@@ -6,6 +6,7 @@
     %link{:href => '/static/css/admin/index.css', :rel => 'stylesheet', :type => 'text/css'}
     %script{:src => "/static/js/jquery/jquery.js", :type => 'text/javascript'}
     %script{:src => "/static/js/jquery/jquery.blockUI.js", :type => 'text/javascript'}
+    %script{:src => "/static/js/jquery/jquery.base64.js", :type => 'text/javascript'}
     %script{:src => "/static/js/jquery/jquery.form.js", :type => 'text/javascript'}
     %script{:src => "/static/js/admin/index.js", :type => 'text/javascript'}
   %body
@@ -28,6 +29,12 @@
             %label{:for => 'nick'} 中文標識
             %input{:type => 'text', :name => 'nick', :id => 'nick', :required => 'required'}
           .rowElem
+            %label{:for => 'credit'} 信用账户
+            %input{:type => 'number', :name => 'credit', :id => 'credit', :min => 0, :value => 0, :required => 'required'}
+          .rowElem
+            %label{:for => 'cash'} 現金账户
+            %input{:type => 'number', :name => 'cash', :id => 'cash', :min => 0, :value => 0, :required => 'required'}
+          .rowElem
             %input{:type => 'submit', :value => '創建'}
             %a.cancel 取消
       #create_player_wapper.pop
@@ -44,6 +51,12 @@
           .rowElem
             %label{:for => 're-password'} 確認密碼
             %input{:type => 'password', :name => 're-password', :id => 're-password', :required => 'required'}
+          .rowElem
+            %label{:for => 'credit'} 信用账户
+            %input{:type => 'number', :name => 'credit', :id => 'credit', :min => 0, :value => 0, :required => 'required'}
+          .rowElem
+            %label{:for => 'cash'} 現金账户
+            %input{:type => 'number', :name => 'cash', :id => 'cash', :min => 0, :value => 0, :required => 'required'}
           .rowElem
             %input{:type => 'submit', :value => '創建'}
             %a.cancel 取消
