--- a/src/view/templates/layout.html
+++ b/src/view/templates/layout.html
@@ -6,6 +6,7 @@
     <link href='/static/css/admin/index.css' rel='stylesheet' type='text/css' />
     <script src='/static/js/jquery/jquery.js' type='text/javascript'></script>
     <script src='/static/js/jquery/jquery.blockUI.js' type='text/javascript'></script>
+    <script src='/static/js/jquery/jquery.base64.js' type='text/javascript'></script>
     <script src='/static/js/jquery/jquery.form.js' type='text/javascript'></script>
     <script src='/static/js/admin/index.js' type='text/javascript'></script>
   </head>
@@ -32,6 +33,14 @@
             <input id='nick' name='nick' required='required' type='text' />
           </div>
           <div class='rowElem'>
+            <label for='credit'>信用账户</label>
+            <input id='credit' min='0' name='credit' required='required' type='number' value='0' />
+          </div>
+          <div class='rowElem'>
+            <label for='cash'>現金账户</label>
+            <input id='cash' min='0' name='cash' required='required' type='number' value='0' />
+          </div>
+          <div class='rowElem'>
             <input type='submit' value='創建' />
             <a class='cancel'>取消</a>
           </div>
@@ -52,6 +61,14 @@
           <div class='rowElem'>
             <label for='re-password'>確認密碼</label>
             <input id='re-password' name='re-password' required='required' type='password' />
+          </div>
+          <div class='rowElem'>
+            <label for='credit'>信用账户</label>
+            <input id='credit' min='0' name='credit' required='required' type='number' value='0' />
+          </div>
+          <div class='rowElem'>
+            <label for='cash'>現金账户</label>
+            <input id='cash' min='0' name='cash' required='required' type='number' value='0' />
           </div>
           <div class='rowElem'>
             <input type='submit' value='創建' />
