--- a/src/haml/templates/layout.html.haml
+++ b/src/haml/templates/layout.html.haml
@@ -3,64 +3,14 @@
   %head
     %meta{:charset => "utf-8"}
     %title 創世紀-系统管理-{% block title %}{% endblock %}
+    %link{:href => '/static/css/thickbox.css', :rel => 'stylesheet', :type => 'text/css'}
     %link{:href => '/static/css/admin/index.css', :rel => 'stylesheet', :type => 'text/css'}
     %script{:src => "/static/js/jquery/jquery.js", :type => 'text/javascript'}
-    %script{:src => "/static/js/jquery/jquery.blockUI.js", :type => 'text/javascript'}
+    %script{:src => "/static/js/jquery/jquery.thickbox.js", :type => 'text/javascript'}
     %script{:src => "/static/js/jquery/jquery.base64.js", :type => 'text/javascript'}
     %script{:src => "/static/js/jquery/jquery.form.js", :type => 'text/javascript'}
     %script{:src => "/static/js/admin/index.js", :type => 'text/javascript'}
   %body
-    #nil
-      #create_agent_wapper.pop
-        %h2 創建代理
-        %hr
-
-        %form{:id => 'create_agent_form', :action => '/agent/create', :method => "post"}
-          .rowElem
-            %label{:for => 'identity'} 登錄名
-            %input{:type => 'text', :name => 'identity', :id => 'identity', :required => 'required'}
-          .rowElem
-            %label{:for => 'password'} 密碼
-            %input{:type => 'password', :name => 'password', :id => 'password', :required => 'required'}
-          .rowElem
-            %label{:for => 're-password'} 確認密碼
-            %input{:type => 'password', :name => 're-password', :id => 're-password', :required => 'required'}
-          .rowElem
-            %label{:for => 'nick'} 中文標識
-            %input{:type => 'text', :name => 'nick', :id => 'nick', :required => 'required'}
-          .rowElem
-            %label{:for => 'credit'} 信用账户
-            %input{:type => 'number', :name => 'credit', :id => 'credit', :min => 0, :value => 0, :required => 'required'}
-          .rowElem
-            %label{:for => 'cash'} 現金账户
-            %input{:type => 'number', :name => 'cash', :id => 'cash', :min => 0, :value => 0, :required => 'required'}
-          .rowElem
-            %input{:type => 'submit', :value => '創建'}
-            %a.cancel 取消
-      #create_player_wapper.pop
-        %h2 創建玩家
-        %hr
-
-        %form{:id => 'create_player_form', :action => '{% url controller="player" action="create" %}', :method => "post"}
-          .rowElem
-            %label{:for => 'identity'} 登錄名
-            %input{:type => 'text', :name => 'identity', :id => 'identity', :required => 'required'}
-          .rowElem
-            %label{:for => 'password'} 密碼
-            %input{:type => 'password', :name => 'password', :id => 'password', :required => 'required'}
-          .rowElem
-            %label{:for => 're-password'} 確認密碼
-            %input{:type => 'password', :name => 're-password', :id => 're-password', :required => 'required'}
-          .rowElem
-            %label{:for => 'credit'} 信用账户
-            %input{:type => 'number', :name => 'credit', :id => 'credit', :min => 0, :value => 0, :required => 'required'}
-          .rowElem
-            %label{:for => 'cash'} 現金账户
-            %input{:type => 'number', :name => 'cash', :id => 'cash', :min => 0, :value => 0, :required => 'required'}
-          .rowElem
-            %input{:type => 'submit', :value => '創建'}
-            %a.cancel 取消
-
     #header
       #main
         %label{:id => "logo"} Genesis 創世紀
@@ -72,9 +22,9 @@
             %span{:class => "title"} 用户管理
             %ul{:class => "group"}
               %li{:class => "item"}
-                %a.pop{:id => 'create_player', :href => '{% url controller="player" action="create" %}'} 創建玩家
+                %a.thickbox{:id => 'create_player', :title => "請輸入玩家信息", :href => '/player/create?height=160&width=218'} 創建玩家
               %li{:class => "item"}
-                %a.pop{:id => 'create_agent', :href => '/agent/create'} 創建代理
+                %a.thickbox{:id => 'create_agent', :title => "請輸入代理信息", :href => '/agent/create?height=180&width=218'} 創建代理
         #content
           = '{% block body %}'
           = '{% endblock %}'
