使用chicago boss的新版本，修复一些因此产生的BUG，使其可以登陆。

--- a/genesis_console/src/assets/admin/login.html.haml
+++ b/genesis_console/src/assets/admin/login.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:charset => "utf-8"}
     %title 創世紀-系统管理-登陆
-    %link{:href => '/static/css/login.css', :rel => 'stylesheet', :type => 'text/css'}
+    %link{:href => '/static/login.css', :rel => 'stylesheet', :type => 'text/css'}
 
   %body
     #header
