--- a/genesis_console/src/view/templates/layout.html
+++ b/genesis_console/src/view/templates/layout.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset='utf-8' />
     <title>創世紀-系统管理-{% block title %}{% endblock %}</title>
-    <link href='/static/css/thickbox.css' rel='stylesheet' type='text/css' />
-    <link href='/static/css/admin/index.css' rel='stylesheet' type='text/css' />
-    <script src='/static/js/jquery/jquery.js' type='text/javascript'></script>
-    <script src='/static/js/jquery/jquery.thickbox.js' type='text/javascript'></script>
-    <script src='/static/js/jquery/jquery.base64.js' type='text/javascript'></script>
-    <script src='/static/js/jquery/jquery.form.js' type='text/javascript'></script>
-    <script src='/static/js/admin/index.js' type='text/javascript'></script>
+    <link href='/static/thickbox.css' rel='stylesheet' type='text/css' />
+    <link href='/static/index.css' rel='stylesheet' type='text/css' />
+    <script src='/static/jquery/jquery.js' type='text/javascript'></script>
+    <script src='/static/jquery/jquery.thickbox.js' type='text/javascript'></script>
+    <script src='/static/jquery/jquery.base64.js' type='text/javascript'></script>
+    <script src='/static/jquery/jquery.form.js' type='text/javascript'></script>
+    <script src='/static/index.js' type='text/javascript'></script>
   </head>
   <body>
     <div id='header'>
